--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -6,18 +6,31 @@
     align-items: center;
 }
 
+$fyre-red: #ec1c24;
+$fyre-orange: #f7941d;
+$grey: #272729;
+
+$fyre-red-tns: rgb(236 28 36 / 0.2);
+$fyre-orange-tns: rgb(247 148 29 / 0.2);
+$fyre-grey-tns: rgb(39 39 41 / 0.2);
+
+$header-grey: rgb(39 39 41 / 0.8);
+
+
 @keyframes logo-pulse {
     from { height: 65% }
     to { height: 75% }
 }
 
-$fyre-red: #ec1c24;
-$fyre-orange: #f7941d;
-$grey: #272729;
+@keyframes about-us-img-tilt {
+    from { transform: rotateZ(0deg) }
+    to { transform: rotateZ(3deg) }
+}
 
-$fyre-red-tns: rgb(236 28 36 / 0.8);
-$fyre-orange-tns: rgb(247 148 29 / 0.8);
-$grey-tns: rgb(39 39 41 / 0.8);
+@keyframes robot-header-color-pulse {
+    from { background: $fyre-red; }
+    to { background: $fyre-orange; }
+}
 
 * {
     font-family: 'Montserrat', sans-serif;
@@ -31,19 +44,14 @@ $grey-tns: rgb(39 39 41 / 0.8);
     }
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    overflow-x: hidden;
-}
+html { scroll-behavior: smooth; }
+body { overflow-x: hidden; }
 
 #full-header {
     @include flex;
     justify-content: flex-start;
     
-    background: $grey-tns;
+    background: $header-grey;
     border: 2px white solid;
     height: 7.5%;
     left: 10px;
@@ -134,6 +142,7 @@ main {
     @include flex;
 
     background-image: url("../../public/assets/svg/checkered_bg.svg");
+    background-attachment: fixed;
     height: 75vh;
 
     #description, #photos {
@@ -153,6 +162,134 @@ main {
             padding-bottom: 5px;
             padding-top: 5px;
         }
-        b { font-size: 100%; }
+        b { font-size: 100% }
+
+        span { 
+            border-bottom-left-radius: 10px;
+            border-top-right-radius: 10px;
+            font-size: 100%; 
+            padding: 4px;
+        }
+
+        .red { background: $fyre-red-tns; }
+        .orange { background: $fyre-orange-tns; }
+        .grey { background: $fyre-grey-tns; }
+
+        img {
+            animation: 2s ease-in-out alternate infinite about-us-img-tilt;
+            aspect-ratio: 1;
+            height: 120%;
+        }
+    }
+}
+
+#robots {
+    @include flex;
+    flex-direction: column;
+    height: 60vh;
+
+    h1 {
+        @include flex;
+
+        animation: 5s linear alternate infinite robot-header-color-pulse;
+        color: white;
+        font-size: 20%;
+        height: 15%;
+        position: relative;
+        width: 100%;
+
+        img {
+            aspect-ratio: 1;
+            height: 50%;
+        }
+
+        &::before {
+            @include flex;
+
+            content: 'Previous Robots 🤖';
+            background: linear-gradient(90deg, $grey 0%, transparent 100%);;
+            height: 100%;
+            position: absolute;
+            width: 100%;
+        }
+    }
+
+    #bots-container {
+        @include flex;
+
+        height: 85%;
+        width: 100%;
+
+        a {
+            @include flex;
+            background: $grey;
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+
+            flex-direction: column;
+            position: relative;
+            transition: background 0.2s, width 0.2s;
+    
+            border: 0;
+            height: 100%;
+            width: 20%;
+    
+            h2, h3, p {
+                @include flex;
+
+                color: white; 
+                pointer-events: none;
+                transition: opacity 0.2s, width 0.2s;
+            }
+
+            h2, h3 { height: 10%; }
+            h2 { 
+                border: 1px white solid;
+                border-bottom-left-radius: 15px;
+                border-top-right-radius: 15px;
+                font-weight: 500;
+                font-size: 40%; 
+                padding: 8px;
+            }
+            h3 { 
+                font-weight: 300;
+                font-size: 20%;
+                
+                &::after {
+                    content: '+';
+                    color: $fyre-orange;
+                    font-weight: 800;
+                }
+            }
+
+            p { 
+                font-size: 15%;
+                transform: translateY(-50%);
+                top: 50%;
+                opacity: 0;
+                position: absolute;
+                width: 80%;
+            }
+
+            &:hover {
+                background: $fyre-red;
+                background-position: center center;
+                background-repeat: no-repeat;
+                background-size: cover;
+
+                width: 30%;
+
+                h2, h3 { opacity: 0; }
+                p { 
+                    opacity: 1; 
+                    width: 53.33%;
+                }
+            }
+        }
+
+        #aurora { background-image: url("../../public/assets/robots/aurora.png") }
+        #liesma { background-image: url("../../public/assets/robots/liesma.png") }
+        #sol { background-image: url("../../public/assets/robots/sol.png") }
     }
 }
