--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -32,6 +32,10 @@ $header-grey: rgb(39 39 41 / 0.8);
     to { background: $fyre-orange; }
 }
 
+body {
+    width: 100%;
+}
+
 * {
     font-family: 'Montserrat', sans-serif;
     font-size: 110px;
@@ -48,6 +52,10 @@ html { scroll-behavior: smooth; }
 body { overflow-x: hidden; }
 
 main .container {
+    @include flex;
+    flex-direction: column;
+    width: 100vw;
+    
     #full-header {
         @include flex;
         justify-content: flex-start;
@@ -59,7 +67,7 @@ main .container {
         padding: 5px;
         position: fixed;
         top: 10px;
-        width: 50%;
+        width: 600px;
         z-index: 10000;
 
         img {
@@ -95,9 +103,10 @@ main .container {
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
+        overflow-x: hidden;
         
         height: 100vh;
-        width: 100vw;
+        width: 100%;
 
         div {
             @include flex;
@@ -105,6 +114,7 @@ main .container {
             color: white;
             flex-direction: column;
             height: 50%;
+            white-space: nowrap;
             width: 50%;
 
             h1 {
@@ -130,7 +140,6 @@ main .container {
         img {
             animation: 10s ease-in-out alternate infinite logo-pulse;
             aspect-ratio: 1;
-            height: 60%;
             left: 50%;
             opacity: 0.2;
             pointer-events: none;
@@ -146,6 +155,9 @@ main .container {
         background-image: url("../../public/assets/svg/checkered_bg.svg");
         background-attachment: fixed;
         height: 75vh;
+        overflow-x: hidden;
+        overflow-y: hidden;
+        width: 100%;
 
         #description, #photos {
             @include flex;
@@ -162,7 +174,7 @@ main .container {
             p { 
                 font-size: 25%; 
                 padding-bottom: 5px;
-                padding-top: 5px;
+                padding-top: 5px;       
             }
             b { font-size: 100% }
 
@@ -180,7 +192,7 @@ main .container {
             img {
                 animation: 2s ease-in-out alternate infinite about-us-img-tilt;
                 aspect-ratio: 1;
-                height: 120%;
+                width: 100%;
             }
         }
     }
@@ -189,6 +201,7 @@ main .container {
         @include flex;
         flex-direction: column;
         height: 60vh;
+        width: 100%;
 
         h1 {
             @include flex;
@@ -219,7 +232,7 @@ main .container {
         #bots-container {
             @include flex;
 
-            height: 85%;
+            height: 100%;
             width: 100%;
 
             a {
@@ -252,8 +265,10 @@ main .container {
                     border-bottom-left-radius: 15px;
                     border-top-right-radius: 15px;
                     font-weight: 500;
-                    font-size: 40%; 
+                    font-size: 30%; 
                     padding: 8px;
+                    overflow: hidden;
+                    width: 80%;
                 }
                 h3 { 
                     font-weight: 300;
@@ -306,7 +321,7 @@ main .container {
         background-image: url("../../public/assets/svg/checkered_bg.svg");
         background-attachment: fixed;
         height: 65vh;
-        width: 100vw;
+        width: 100%;
 
         #join-us, #sponsors {
             @include flex;
@@ -362,11 +377,103 @@ main .container {
         background-image: url("../../public/assets/fyre_banner.png");
         height: 50vh;
         justify-content: flex-start;
-        width: 100vw;
+        width: 100%;
 
         #links {
             height: 100%;
             width: 30%;
         }
     }
+} 
+
+@media screen and (max-width: 800px) {
+    main .container {
+        #title {
+            div {
+                h1 {
+                    font-size: 60%;
+                }
+
+                p {
+                    font-size: 20%;
+                }
+            }
+
+            img {
+                width: 0%;
+            }
+        }
+
+        #robots {
+            height: 100vh;
+
+            h1 {
+                height: 10%;
+            }
+
+            #bots-container {
+                flex-direction: column;
+                
+                a {
+                    height: 20%;
+                    width: 100%;
+
+                    h2 {
+                        height: 30%;
+                        margin: 5px;
+                        width: 40%;
+                    }
+
+                    &:hover {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+
+        #contact {
+            flex-direction: column;
+            height: 100vh;
+
+            #join-us, #sponsors {
+                font-size: 90%;
+                height: 50%;
+                width: 85%;
+            }
+        }
+    }
 }
+
+@media screen and (max-width: 1000px) {
+    main .container {
+        #about-us {
+            #description {
+                width: 70%;
+
+                p {
+                    font-size: 22.5%;
+                }
+            }
+
+            #photos {
+                width: 0%;
+
+                img {
+                    height: 0%;
+                }
+            }
+        }
+
+        #robots {
+
+        }
+    }
+}
+
+/*
+* {
+    background: #000 !important;
+    color: #0f0 !important;
+    outline: solid #f00 1px !important;
+}
+*/
